--- a/jest-stare/index.html
+++ b/jest-stare/index.html
@@ -153,7 +153,7 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1720792981233,
+  &quot;startTime&quot;: 1720793449724,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [
     {
@@ -164,10 +164,10 @@
       &quot;numTodoTests&quot;: 0,
       &quot;openHandles&quot;: [],
       &quot;perfStats&quot;: {
-        &quot;end&quot;: 1720792982078,
-        &quot;runtime&quot;: 707,
+        &quot;end&quot;: 1720793450493,
+        &quot;runtime&quot;: 683,
         &quot;slow&quot;: false,
-        &quot;start&quot;: 1720792981371
+        &quot;start&quot;: 1720793449810
       },
       &quot;skipped&quot;: false,
       &quot;snapshot&quot;: {
@@ -185,7 +185,7 @@
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 90,
+          &quot;duration&quot;: 91,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Cadastrar um novo conteúdo e verificar que o conteúdo está devidamente retornando os dados esperados e o statusCode 201.&quot;,
@@ -200,7 +200,7 @@
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 11,
+          &quot;duration&quot;: 10,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Realizar a consulta do conteúdo em que acabou de cadastrar, retornando os dados esperados e o statusCode 200.&quot;,
@@ -215,17 +215,17 @@
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 11,
+          &quot;duration&quot;: 10,
           &quot;failureDetails&quot;: [
             {
               &quot;matcherResult&quot;: {
-                &quot;message&quot;: &quot;\u001b[2mexpect(\u001b[22m\u001b[31mreceived\u001b[39m\u001b[2m).\u001b[22mtoHaveProperty\u001b[2m(\u001b[22m\u001b[32mpath\u001b[39m\u001b[2m, \u001b[22m\u001b[32mvalue\u001b[39m\u001b[2m)\u001b[22m\n\nExpected path: \u001b[32m\&quot;id\&quot;\u001b[39m\n\nExpected value: \u001b[32m42\u001b[39m\nReceived value: \u001b[31m43\u001b[39m&quot;,
+                &quot;message&quot;: &quot;\u001b[2mexpect(\u001b[22m\u001b[31mreceived\u001b[39m\u001b[2m).\u001b[22mtoHaveProperty\u001b[2m(\u001b[22m\u001b[32mpath\u001b[39m\u001b[2m, \u001b[22m\u001b[32mvalue\u001b[39m\u001b[2m)\u001b[22m\n\nExpected path: \u001b[32m\&quot;id\&quot;\u001b[39m\n\nExpected value: \u001b[32m45\u001b[39m\nReceived value: \u001b[31m47\u001b[39m&quot;,
                 &quot;pass&quot;: false
               }
             }
           ],
           &quot;failureMessages&quot;: [
-            &quot;Error: \u001b[2mexpect(\u001b[22m\u001b[31mreceived\u001b[39m\u001b[2m).\u001b[22mtoHaveProperty\u001b[2m(\u001b[22m\u001b[32mpath\u001b[39m\u001b[2m, \u001b[22m\u001b[32mvalue\u001b[39m\u001b[2m)\u001b[22m\n\nExpected path: \u001b[32m\&quot;id\&quot;\u001b[39m\n\nExpected value: \u001b[32m42\u001b[39m\nReceived value: \u001b[31m43\u001b[39m\n    at Object.toHaveProperty (C:\\Projetos\\test-api\\test\\test-conteudos.test.js:45:27)\n    at processTicksAndRejections (node:internal&#x2F;process&#x2F;task_queues:95:5)&quot;
+            &quot;Error: \u001b[2mexpect(\u001b[22m\u001b[31mreceived\u001b[39m\u001b[2m).\u001b[22mtoHaveProperty\u001b[2m(\u001b[22m\u001b[32mpath\u001b[39m\u001b[2m, \u001b[22m\u001b[32mvalue\u001b[39m\u001b[2m)\u001b[22m\n\nExpected path: \u001b[32m\&quot;id\&quot;\u001b[39m\n\nExpected value: \u001b[32m45\u001b[39m\nReceived value: \u001b[31m47\u001b[39m\n    at Object.toHaveProperty (C:\\Projetos\\test-api\\test\\test-conteudos.test.js:53:27)\n    at processTicksAndRejections (node:internal&#x2F;process&#x2F;task_queues:95:5)&quot;
           ],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Você deverá alterar o conteúdo consultado anteriormente, e em seguida validar se realmente os dados foram alterados e o statusCode 201.&quot;,
           &quot;invocations&quot;: 1,
@@ -239,19 +239,19 @@
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 7,
+          &quot;duration&quot;: 6,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Remover o conteúdo e garantir que o mesmo foi removido, não existe mais para consulta e o statusCode 200.&quot;,
           &quot;invocations&quot;: 1,
           &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 2,
+          &quot;numPassingAsserts&quot;: 1,
           &quot;retryReasons&quot;: [],
           &quot;status&quot;: &quot;passed&quot;,
           &quot;title&quot;: &quot;Remover o conteúdo e garantir que o mesmo foi removido, não existe mais para consulta e o statusCode 200.&quot;
         }
       ],
-      &quot;failureMessage&quot;: &quot;\u001b[1m\u001b[31m  \u001b[1m● \u001b[22m\u001b[1mSuite de testes da api conteudos.. › Você deverá alterar o conteúdo consultado anteriormente, e em seguida validar se realmente os dados foram alterados e o statusCode 201.\u001b[39m\u001b[22m\n\n    \u001b[2mexpect(\u001b[22m\u001b[31mreceived\u001b[39m\u001b[2m).\u001b[22mtoHaveProperty\u001b[2m(\u001b[22m\u001b[32mpath\u001b[39m\u001b[2m, \u001b[22m\u001b[32mvalue\u001b[39m\u001b[2m)\u001b[22m\n\n    Expected path: \u001b[32m\&quot;id\&quot;\u001b[39m\n\n    Expected value: \u001b[32m42\u001b[39m\n    Received value: \u001b[31m43\u001b[39m\n\u001b[2m\u001b[22m\n\u001b[2m    \u001b[0m \u001b[90m 43 |\u001b[39m     \u001b[33m.\u001b[39msend(cadastro_conteudo)\u001b[33m;\u001b[39m  \u001b[22m\n\u001b[2m     \u001b[90m 44 |\u001b[39m     expect(response\u001b[33m.\u001b[39mbody)\u001b[33m.\u001b[39mtoBeDefined()\u001b[33m;\u001b[39m \u001b[22m\n\u001b[2m    \u001b[31m\u001b[1m&gt;\u001b[22m\u001b[2m\u001b[39m\u001b[90m 45 |\u001b[39m     expect(response\u001b[33m.\u001b[39mbody)\u001b[33m.\u001b[39mtoHaveProperty(\u001b[32m&#39;id&#39;\u001b[39m\u001b[33m,\u001b[39midConteudo)\u001b[33m;\u001b[39m        \u001b[22m\n\u001b[2m     \u001b[90m    |\u001b[39m                           \u001b[31m\u001b[1m^\u001b[22m\u001b[2m\u001b[39m\u001b[22m\n\u001b[2m     \u001b[90m 46 |\u001b[39m     expect(response\u001b[33m.\u001b[39mstatus)\u001b[33m.\u001b[39mtoBe(\u001b[35m201\u001b[39m)\u001b[22m\n\u001b[2m     \u001b[90m 47 |\u001b[39m     console\u001b[33m.\u001b[39mlog(response\u001b[33m.\u001b[39mbody)   \u001b[22m\n\u001b[2m     \u001b[90m 48 |\u001b[39m })\u001b[33m;\u001b[39m\u001b[0m\u001b[22m\n\u001b[2m\u001b[22m\n\u001b[2m      \u001b[2mat Object.toHaveProperty (\u001b[22m\u001b[2m\u001b[0m\u001b[36mtest&#x2F;test-conteudos.test.js\u001b[39m\u001b[0m\u001b[2m:45:27)\u001b[22m\u001b[2m\u001b[22m\n&quot;
+      &quot;failureMessage&quot;: &quot;\u001b[1m\u001b[31m  \u001b[1m● \u001b[22m\u001b[1mSuite de testes da api conteudos.. › Você deverá alterar o conteúdo consultado anteriormente, e em seguida validar se realmente os dados foram alterados e o statusCode 201.\u001b[39m\u001b[22m\n\n    \u001b[2mexpect(\u001b[22m\u001b[31mreceived\u001b[39m\u001b[2m).\u001b[22mtoHaveProperty\u001b[2m(\u001b[22m\u001b[32mpath\u001b[39m\u001b[2m, \u001b[22m\u001b[32mvalue\u001b[39m\u001b[2m)\u001b[22m\n\n    Expected path: \u001b[32m\&quot;id\&quot;\u001b[39m\n\n    Expected value: \u001b[32m45\u001b[39m\n    Received value: \u001b[31m47\u001b[39m\n\u001b[2m\u001b[22m\n\u001b[2m    \u001b[0m \u001b[90m 51 |\u001b[39m     \u001b[33m.\u001b[39msend(alterarCadastroConteudo)\u001b[33m;\u001b[39m  \u001b[22m\n\u001b[2m     \u001b[90m 52 |\u001b[39m     expect(response\u001b[33m.\u001b[39mbody)\u001b[33m.\u001b[39mtoBeDefined()\u001b[33m;\u001b[39m \u001b[22m\n\u001b[2m    \u001b[31m\u001b[1m&gt;\u001b[22m\u001b[2m\u001b[39m\u001b[90m 53 |\u001b[39m     expect(response\u001b[33m.\u001b[39mbody)\u001b[33m.\u001b[39mtoHaveProperty(\u001b[32m&#39;id&#39;\u001b[39m\u001b[33m,\u001b[39m(idConteudo\u001b[33m-\u001b[39m\u001b[35m1\u001b[39m))\u001b[33m;\u001b[39m        \u001b[22m\n\u001b[2m     \u001b[90m    |\u001b[39m                           \u001b[31m\u001b[1m^\u001b[22m\u001b[2m\u001b[39m\u001b[22m\n\u001b[2m     \u001b[90m 54 |\u001b[39m     expect(response\u001b[33m.\u001b[39mstatus)\u001b[33m.\u001b[39mtoBe(\u001b[35m201\u001b[39m)\u001b[22m\n\u001b[2m     \u001b[90m 55 |\u001b[39m     console\u001b[33m.\u001b[39mlog(response\u001b[33m.\u001b[39mbody)   \u001b[22m\n\u001b[2m     \u001b[90m 56 |\u001b[39m })\u001b[33m;\u001b[39m\u001b[0m\u001b[22m\n\u001b[2m\u001b[22m\n\u001b[2m      \u001b[2mat Object.toHaveProperty (\u001b[22m\u001b[2m\u001b[0m\u001b[36mtest&#x2F;test-conteudos.test.js\u001b[39m\u001b[0m\u001b[2m:53:27)\u001b[22m\u001b[2m\u001b[22m\n&quot;
     }
   ],
   &quot;wasInterrupted&quot;: false
@@ -310,7 +310,7 @@
   ],
   &quot;rootDir&quot;: &quot;C:\\Projetos\\test-api&quot;,
   &quot;runTestsByPath&quot;: false,
-  &quot;seed&quot;: 1523499237,
+  &quot;seed&quot;: 1725585559,
   &quot;skipFilter&quot;: false,
   &quot;snapshotFormat&quot;: {
     &quot;escapeString&quot;: false,
